--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
             button.addEventListener('click', function (){
                 let confirmar  = confirm('Vamos conhecer o Niagara, enquanto aproveitamos a culinaria Canadense?');
                 if (confirmar === true){
-                    resp.innerText = `Sabia resposta! Te vejo lá! :)`;
+                    resp.innerText = `Exclente resposta! Te vejo lá! :)`;
                 } else {
-                    resp.innerText = `Deu ruim tropa! :(`;
+                    resp.innerText = `Deu ruim, tropa! :(`;
                 }
             });
         }
